# laser-dac-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: automatic.rs  callback.rs  frame_adapter.rs  high_level.rs  manual.rs  mid_level.rs  unified.rs
examples/common/: audio.rs  mod.rs
plans/streaming/: example-pipeline.md  streaming.md
src/: backend.rs  discovery.rs  discovery_worker.rs  error.rs  frame_adapter.rs  lib.rs  stream.rs  types.rs  worker.rs
src/protocols/ether_dream/: mod.rs  protocol.rs
src/protocols/ether_dream/dac/: mod.rs  stream.rs
src/protocols/helios/: frame.rs  native.rs
src/protocols/idn/: mod.rs  protocol.rs
src/protocols/idn/dac/: stream.rs
src/protocols/lasercube_usb/: mod.rs  protocol.rs
src/protocols/lasercube_usb/dac/: stream.rs
src/protocols/lasercube_wifi/: mod.rs  protocol.rs
src/protocols/lasercube_wifi/dac/: mod.rs  stream.rs
tests/: idn_e2e.rs
tools/idn-simulator/: Cargo.toml
tools/idn-simulator/src/: app.rs  fps_estimator.rs  main.rs  persistence_buffer.rs  protocol_handler.rs  renderer.rs  server.rs  settings.rs  timing.rs
